# bground

./: .bground  .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  configure.sh
data/: PROGRAM_DESCRIPTION  VERSION_TEMPLATE  VERSION_TEMPLATE_DEV
inc/: Database.h  FileList.h  Output.h  Photo.h
src/: CMakeLists.txt  Database.cpp  FileList.cpp  Output.cpp  Photo.cpp  data.S  main.cpp
test/unit/: CMakeLists.txt
